fixed gap and margins

--- a/index.css
+++ b/index.css
@@ -50,8 +50,8 @@ input[type="text"], textarea {
     flex-direction: row;
     align-items: left;
     padding: 5px 5px;
-    margin-left: 12px;
-    gap: 10px;
+    margin-left: 10px;
+    gap: 8px;
 }
 
 input {
